resolved stretched view

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,6 +1,5 @@
 /*
 this imports a css reset
-
 a css reset is a stylesheet that applies rules
 such that the "default styles" of every major
 browser are identical
@@ -9,39 +8,15 @@ browser are identical
 
 /* give links a blue color, and underline them */
 a {
-  color: #0025b9;
+  color: #0d74ce;
   text-decoration: underline;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif, cursive;
 }
 
 /* when the links are hovered, change them to a lighter blue */
 a:hover {
-  color: #1093ff;
-
+  color: #0588f0;
 }
 
-<<<<<<< HEAD
-/* give headings and form labels a default color that is dark and has strong contrast against the background */
-:is(h1, label) {
-  color: rgb(13, 20, 99);
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif, cursive;
-}
-
-:is(h2, h3, h4, h5, h6, label) {
-  color: #90aeff;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif, cursive;
-}
-
-/* give text a default color that is ligher than headings. it still has enough contrast to be legible, but looks visually less important */
-:is(p, li) {
-  color: #dedede;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif, cursive;
-}
-
-body { background: rgb(13, 20, 99) }
-h2 { color: rgb(255, 255, 255) }
-
-=======
 /* text color heading */
 :is(h1, h2, h3, h4, h5, h6, label) {
   color: #202020;
@@ -139,5 +114,3 @@ p, li {
   background-color: #3b5998; 
   color: #ffffff; 
 }
->>>>>>> css-changes
-
